# python-sdk/src/intellioptics/generated/openapi/api/default/add_label_v1_labels_post.py
@@ -5,21 +5,21 @@ import httpx
 
 from ... import errors
 from ...client import AuthenticatedClient, Client
-from ...models.answer_out import AnswerOut
 from ...models.http_validation_error import HTTPValidationError
-from ...models.image_query_json import ImageQueryJson
+from ...models.label_ack import LabelAck
+from ...models.label_create import LabelCreate
 from ...types import Response
 
 
 def _get_kwargs(
     *,
-    body: ImageQueryJson,
+    body: LabelCreate,
 ) -> Dict[str, Any]:
     headers: Dict[str, Any] = {}
 
     _kwargs: Dict[str, Any] = {
         "method": "post",
-        "url": "/v1/image-queries-json",
+        "url": "/v1/labels",
     }
 
     _body = body.to_dict()
@@ -33,9 +33,9 @@ def _get_kwargs(
 
 def _parse_response(
     *, client: Union[AuthenticatedClient, Client], response: httpx.Response
-) -> Optional[Union[AnswerOut, HTTPValidationError]]:
+) -> Optional[Union[HTTPValidationError, LabelAck]]:
     if response.status_code == HTTPStatus.OK:
-        response_200 = AnswerOut.from_dict(response.json())
+        response_200 = LabelAck.from_dict(response.json())
 
         return response_200
     if response.status_code == HTTPStatus.UNPROCESSABLE_ENTITY:
@@ -50,7 +50,7 @@ def _parse_response(
 
 def _build_response(
     *, client: Union[AuthenticatedClient, Client], response: httpx.Response
-) -> Response[Union[AnswerOut, HTTPValidationError]]:
+) -> Response[Union[HTTPValidationError, LabelAck]]:
     return Response(
         status_code=HTTPStatus(response.status_code),
         content=response.content,
@@ -62,19 +62,19 @@ def _build_response(
 def sync_detailed(
     *,
     client: Union[AuthenticatedClient, Client],
-    body: ImageQueryJson,
-) -> Response[Union[AnswerOut, HTTPValidationError]]:
-    """Image Query Json
+    body: LabelCreate,
+) -> Response[Union[HTTPValidationError, LabelAck]]:
+    """Add Label
 
     Args:
-        body (ImageQueryJson):
+        body (LabelCreate):
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[Union[AnswerOut, HTTPValidationError]]
+        Response[Union[HTTPValidationError, LabelAck]]
     """
 
     kwargs = _get_kwargs(
@@ -91,19 +91,19 @@ def sync_detailed(
 def sync(
     *,
     client: Union[AuthenticatedClient, Client],
-    body: ImageQueryJson,
-) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    """Image Query Json
+    body: LabelCreate,
+) -> Optional[Union[HTTPValidationError, LabelAck]]:
+    """Add Label
 
     Args:
-        body (ImageQueryJson):
+        body (LabelCreate):
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Union[AnswerOut, HTTPValidationError]
+        Union[HTTPValidationError, LabelAck]
     """
 
     return sync_detailed(
@@ -115,19 +115,19 @@ def sync(
 async def asyncio_detailed(
     *,
     client: Union[AuthenticatedClient, Client],
-    body: ImageQueryJson,
-) -> Response[Union[AnswerOut, HTTPValidationError]]:
-    """Image Query Json
+    body: LabelCreate,
+) -> Response[Union[HTTPValidationError, LabelAck]]:
+    """Add Label
 
     Args:
-        body (ImageQueryJson):
+        body (LabelCreate):
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[Union[AnswerOut, HTTPValidationError]]
+        Response[Union[HTTPValidationError, LabelAck]]
     """
 
     kwargs = _get_kwargs(
@@ -142,19 +142,19 @@ async def asyncio_detailed(
 async def asyncio(
     *,
     client: Union[AuthenticatedClient, Client],
-    body: ImageQueryJson,
-) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    """Image Query Json
+    body: LabelCreate,
+) -> Optional[Union[HTTPValidationError, LabelAck]]:
+    """Add Label
 
     Args:
-        body (ImageQueryJson):
+        body (LabelCreate):
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Union[AnswerOut, HTTPValidationError]
+        Union[HTTPValidationError, LabelAck]
     """
 
     return (
