# python-sdk/src/intellioptics/generated/openapi/api/default/get_image_query_v1_image_queries_iq_id_get.py
@@ -1,60 +1,48 @@
 from http import HTTPStatus
-from typing import Any, Optional, Union, cast
+from typing import Any, Dict, Optional, Union
 
 import httpx
 
-from ...client import AuthenticatedClient, Client
-from ...types import Response, UNSET
 from ... import errors
-
+from ...client import AuthenticatedClient, Client
 from ...models.answer_out import AnswerOut
 from ...models.http_validation_error import HTTPValidationError
-from typing import cast
-
+from ...types import Response
 
 
 def _get_kwargs(
     iq_id: str,
-
-) -> dict[str, Any]:
-    
-
-    
-
-    
-
-    _kwargs: dict[str, Any] = {
+) -> Dict[str, Any]:
+    _kwargs: Dict[str, Any] = {
         "method": "get",
-        "url": "/v1/image-queries/{iq_id}".format(iq_id=iq_id,),
+        "url": "/v1/image-queries/{iq_id}".format(
+            iq_id=iq_id,
+        ),
     }
-
 
     return _kwargs
 
 
-
-def _parse_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    if response.status_code == 200:
+def _parse_response(
+    *, client: Union[AuthenticatedClient, Client], response: httpx.Response
+) -> Optional[Union[AnswerOut, HTTPValidationError]]:
+    if response.status_code == HTTPStatus.OK:
         response_200 = AnswerOut.from_dict(response.json())
 
-
-
         return response_200
-
-    if response.status_code == 422:
+    if response.status_code == HTTPStatus.UNPROCESSABLE_ENTITY:
         response_422 = HTTPValidationError.from_dict(response.json())
 
-
-
         return response_422
-
     if client.raise_on_unexpected_status:
         raise errors.UnexpectedStatus(response.status_code, response.content)
     else:
         return None
 
 
-def _build_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Response[Union[AnswerOut, HTTPValidationError]]:
+def _build_response(
+    *, client: Union[AuthenticatedClient, Client], response: httpx.Response
+) -> Response[Union[AnswerOut, HTTPValidationError]]:
     return Response(
         status_code=HTTPStatus(response.status_code),
         content=response.content,
@@ -67,9 +55,8 @@ def sync_detailed(
     iq_id: str,
     *,
     client: Union[AuthenticatedClient, Client],
-
 ) -> Response[Union[AnswerOut, HTTPValidationError]]:
-    """ Get Image Query
+    """Get Image Query
 
     Args:
         iq_id (str):
@@ -80,12 +67,10 @@ def sync_detailed(
 
     Returns:
         Response[Union[AnswerOut, HTTPValidationError]]
-     """
-
+    """
 
     kwargs = _get_kwargs(
         iq_id=iq_id,
-
     )
 
     response = client.get_httpx_client().request(
@@ -94,13 +79,13 @@ def sync_detailed(
 
     return _build_response(client=client, response=response)
 
+
 def sync(
     iq_id: str,
     *,
     client: Union[AuthenticatedClient, Client],
-
 ) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    """ Get Image Query
+    """Get Image Query
 
     Args:
         iq_id (str):
@@ -111,22 +96,20 @@ def sync(
 
     Returns:
         Union[AnswerOut, HTTPValidationError]
-     """
-
+    """
 
     return sync_detailed(
         iq_id=iq_id,
-client=client,
-
+        client=client,
     ).parsed
+
 
 async def asyncio_detailed(
     iq_id: str,
     *,
     client: Union[AuthenticatedClient, Client],
-
 ) -> Response[Union[AnswerOut, HTTPValidationError]]:
-    """ Get Image Query
+    """Get Image Query
 
     Args:
         iq_id (str):
@@ -137,27 +120,23 @@ async def asyncio_detailed(
 
     Returns:
         Response[Union[AnswerOut, HTTPValidationError]]
-     """
-
+    """
 
     kwargs = _get_kwargs(
         iq_id=iq_id,
-
     )
 
-    response = await client.get_async_httpx_client().request(
-        **kwargs
-    )
+    response = await client.get_async_httpx_client().request(**kwargs)
 
     return _build_response(client=client, response=response)
+
 
 async def asyncio(
     iq_id: str,
     *,
     client: Union[AuthenticatedClient, Client],
-
 ) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    """ Get Image Query
+    """Get Image Query
 
     Args:
         iq_id (str):
@@ -168,11 +147,11 @@ async def asyncio(
 
     Returns:
         Union[AnswerOut, HTTPValidationError]
-     """
+    """
 
-
-    return (await asyncio_detailed(
-        iq_id=iq_id,
-client=client,
-
-    )).parsed
+    return (
+        await asyncio_detailed(
+            iq_id=iq_id,
+            client=client,
+        )
+    ).parsed
