# python-sdk/src/intellioptics/generated/openapi/api/default/image_query_v1_image_queries_post.py
@@ -1,67 +1,57 @@
 from http import HTTPStatus
-from typing import Any, Optional, Union, cast
+from typing import Any, Dict, Optional, Union
 
 import httpx
 
-from ...client import AuthenticatedClient, Client
-from ...types import Response, UNSET
 from ... import errors
-
+from ...client import AuthenticatedClient, Client
 from ...models.answer_out import AnswerOut
-from ...models.body_image_query_v1_image_queries_post import BodyImageQueryV1ImageQueriesPost
+from ...models.body_image_query_v1_image_queries_post import (
+    BodyImageQueryV1ImageQueriesPost,
+)
 from ...models.http_validation_error import HTTPValidationError
-from typing import cast
-
+from ...types import Response
 
 
 def _get_kwargs(
     *,
     body: BodyImageQueryV1ImageQueriesPost,
+) -> Dict[str, Any]:
+    headers: Dict[str, Any] = {}
 
-) -> dict[str, Any]:
-    headers: dict[str, Any] = {}
-
-
-    
-
-    
-
-    _kwargs: dict[str, Any] = {
+    _kwargs: Dict[str, Any] = {
         "method": "post",
         "url": "/v1/image-queries",
     }
 
-    _kwargs["files"] = body.to_multipart()
+    _body = body.to_multipart()
 
-
+    _kwargs["files"] = _body
 
     _kwargs["headers"] = headers
     return _kwargs
 
 
-
-def _parse_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    if response.status_code == 200:
+def _parse_response(
+    *, client: Union[AuthenticatedClient, Client], response: httpx.Response
+) -> Optional[Union[AnswerOut, HTTPValidationError]]:
+    if response.status_code == HTTPStatus.OK:
         response_200 = AnswerOut.from_dict(response.json())
 
-
-
         return response_200
-
-    if response.status_code == 422:
+    if response.status_code == HTTPStatus.UNPROCESSABLE_ENTITY:
         response_422 = HTTPValidationError.from_dict(response.json())
 
-
-
         return response_422
-
     if client.raise_on_unexpected_status:
         raise errors.UnexpectedStatus(response.status_code, response.content)
     else:
         return None
 
 
-def _build_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Response[Union[AnswerOut, HTTPValidationError]]:
+def _build_response(
+    *, client: Union[AuthenticatedClient, Client], response: httpx.Response
+) -> Response[Union[AnswerOut, HTTPValidationError]]:
     return Response(
         status_code=HTTPStatus(response.status_code),
         content=response.content,
@@ -74,9 +64,8 @@ def sync_detailed(
     *,
     client: Union[AuthenticatedClient, Client],
     body: BodyImageQueryV1ImageQueriesPost,
-
 ) -> Response[Union[AnswerOut, HTTPValidationError]]:
-    """ Image Query
+    """Image Query
 
     Args:
         body (BodyImageQueryV1ImageQueriesPost):
@@ -87,12 +76,10 @@ def sync_detailed(
 
     Returns:
         Response[Union[AnswerOut, HTTPValidationError]]
-     """
-
+    """
 
     kwargs = _get_kwargs(
         body=body,
-
     )
 
     response = client.get_httpx_client().request(
@@ -101,13 +88,13 @@ def sync_detailed(
 
     return _build_response(client=client, response=response)
 
+
 def sync(
     *,
     client: Union[AuthenticatedClient, Client],
     body: BodyImageQueryV1ImageQueriesPost,
-
 ) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    """ Image Query
+    """Image Query
 
     Args:
         body (BodyImageQueryV1ImageQueriesPost):
@@ -118,22 +105,20 @@ def sync(
 
     Returns:
         Union[AnswerOut, HTTPValidationError]
-     """
-
+    """
 
     return sync_detailed(
         client=client,
-body=body,
-
+        body=body,
     ).parsed
+
 
 async def asyncio_detailed(
     *,
     client: Union[AuthenticatedClient, Client],
     body: BodyImageQueryV1ImageQueriesPost,
-
 ) -> Response[Union[AnswerOut, HTTPValidationError]]:
-    """ Image Query
+    """Image Query
 
     Args:
         body (BodyImageQueryV1ImageQueriesPost):
@@ -144,27 +129,23 @@ async def asyncio_detailed(
 
     Returns:
         Response[Union[AnswerOut, HTTPValidationError]]
-     """
-
+    """
 
     kwargs = _get_kwargs(
         body=body,
-
     )
 
-    response = await client.get_async_httpx_client().request(
-        **kwargs
-    )
+    response = await client.get_async_httpx_client().request(**kwargs)
 
     return _build_response(client=client, response=response)
+
 
 async def asyncio(
     *,
     client: Union[AuthenticatedClient, Client],
     body: BodyImageQueryV1ImageQueriesPost,
-
 ) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    """ Image Query
+    """Image Query
 
     Args:
         body (BodyImageQueryV1ImageQueriesPost):
@@ -175,11 +156,11 @@ async def asyncio(
 
     Returns:
         Union[AnswerOut, HTTPValidationError]
-     """
+    """
 
-
-    return (await asyncio_detailed(
-        client=client,
-body=body,
-
-    )).parsed
+    return (
+        await asyncio_detailed(
+            client=client,
+            body=body,
+        )
+    ).parsed
